chore: fix alignment and image issues

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -46,6 +46,9 @@ $light-separator: #e2e2e2
   margin: 2.5rem 1rem
   border-bottom: 1px solid #D9DCE0
 
+.hero-docs
+  margin: 0.8rem 1rem 0.9rem 1rem
+
 .hero.is-light
   background-color: inherit
 
